--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rianjulian.github.io/ecourself-reactJS-course-website",
+  "homepage": "https://rianjulian.github.io/ecourself-reactJS-course-website",
   "name": "ecourself-react",
   "version": "0.1.0",
   "private": false,
