--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://rianjulian.github.io/ecourself-reactJS-course-website",
   "name": "ecourself-react",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
+  "homepage": "/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.20",
     "react-router-dom": "^6.6.1",
     "tailwindcss": "^3.2.4"
