--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecourself-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "https://rianjulian.github.io/ecourself-reactJS-course-website/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
