--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "ecourself-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/ecourself-reactJS-course-website",
+  "homepage": "https://rianjulian.github.io/ecourself-reactJS-course-website/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -40,7 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "^2.0.1",
     "postcss": "^8.4.20",
     "react-router-dom": "^6.6.1",
     "tailwindcss": "^3.2.4"
